--- a/.github/workflows/build.yaml
+++ b/.github/workflows/build.yaml
@@ -3,7 +3,7 @@ on: [ push ]
 env:
 #### An dieser Stelle müssen eure persönlichen Umgebungsvariablen eingetragen werden
   # Tipp: Die Token/der API-Key werden als Secrets in den Repository-Settings eingetragen und hier referenziert.
-  GITHUB_ACCESSTOKEN: ${{ secrets.GITHUB_ACCESSTOKEN }}
+  GITHUB_ACCESSTOKEN: ${{ secrets.ACCESS_TOKEN }}
 jobs:
   compile:
     name: Compile
@@ -19,5 +19,7 @@ jobs:
   
     - name: Compile, build and push
       run: |
-        #### AUFGABE COMPILE, DOCKER BUILD UND PUSH
-          # hier ist Platz für maven package und docker build
+        mvn package
+        docker build --tag ghcr.io/AsdfplayaV2/pet-clinic:latest .
+        docker login --username AsdfplayaV2 --password $ACCESS_TOKEN ghcr.io
+        docker push ghcr.io/AsdfplayaV2/test:latest
